Fix: Fix bug with navbar covered by content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,6 +76,7 @@ body {
     position: sticky;
     top: 0;
     left: 0;
+    z-index: 2;
 }
 
 .header-logo {
